force-app/main/default/objects/Lead/fields/Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Date__c</fullName>
    <inlineHelpText>Enter the Date the Walkin checked</inlineHelpText>
    <label>Walkin Date</label>
    <type>Date</type>
</CustomField>