force-app/main/default/objects/Lead/fields/Design_Number__c.field-meta.xml
<CustomField>
    <fullName>Design_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>