force-app/main/default/objects/Lead/fields/Enquiry_Value__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Value__c</fullName>
    <label>Enquiry Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>