force-app/main/default/objects/Lead/fields/Instagram_ID__c.field-meta.xml
<CustomField>
    <fullName>Instagram_ID__c</fullName>
    <label>Instagram ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>