force-app/main/default/objects/Lead/fields/Jewelry_Type__c.field-meta.xml
<CustomField>
    <fullName>Jewelry_Type__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jewelry_Type</valueSetName>
    </valueSet>
</CustomField>