force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Website Favorites</fullName>
            </value>
            <value>
                <fullName>Website Quotation Asked for</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>