force-app/main/default/objects/Lead/fields/Life_Event_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Life_Event_3_Date__c</fullName>
    <label>Life Event 3 Date</label>
    <type>Date</type>
</CustomField>