force-app/main/default/objects/Lead/fields/Lost_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lost_Comment__c</fullName>
    <label>Lost Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>