force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Product Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due to Price</fullName>
                <label>Price</label>
            </value>
            <value>
                <fullName>Due to Product</fullName>
                <label>Product</label>
            </value>
            <value>
                <fullName>Pocket Size</fullName>
            </value>
            <value>
                <fullName>Due to Slow Follow up</fullName>
                <label>Follow up / Communication</label>
            </value>
            <value>
                <fullName>Other Reason</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>