force-app/main/default/objects/Lead/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Fill in Other Life Event here.</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>