force-app/main/default/objects/Lead/fields/Senior_Negotiator__c.field-meta.xml
<CustomField>
    <fullName>Senior_Negotiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Negotiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>