force-app/main/default/objects/Lead/fields/Skype_ID__c.field-meta.xml
<CustomField>
    <fullName>Skype_ID__c</fullName>
    <label>Skype ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>