force-app/main/default/objects/Lead/fields/Website_Form_Reason__c.field-meta.xml
<CustomField>
    <fullName>Website_Form_Reason__c</fullName>
    <label>Website Form Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Inquiry</fullName>
            </value>
            <value>
                <fullName>Alter Sales Service</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Advertisment / Media Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>