force-app/main/default/objects/Lead/validationRules/Life_Event_2_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Life_Event_2_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( TEXT(  Life_Event_2_Date__c  ) ) ,NOT( ISBLANK( TEXT(  Life_Event_2_if_any__c  ) ) ))</errorConditionFormula>
    <errorDisplayField>Life_Event_2_if_any__c</errorDisplayField>
    <errorMessage>Fill in the Life Event Details</errorMessage>
</ValidationRule>