force-app/main/default/objects/Lead/validationRules/Life_Event_3_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Life_Event_3_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( TEXT(    Life_Event_3_if_any__c    ) ) ,NOT( ISBLANK( TEXT(    Life_Event_3_Date__c    ) ) ))</errorConditionFormula>
    <errorDisplayField>Life_Event_Date__c</errorDisplayField>
    <errorMessage>Fill in the Life Event Details</errorMessage>
</ValidationRule>