force-app/main/default/objects/Lead/validationRules/Life_Event_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Life_Event_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( TEXT( Life_Event_Date__c ) ) ,NOT( ISBLANK( TEXT( Life_Event__c ) ) ))</errorConditionFormula>
    <errorDisplayField>Life_Event__c</errorDisplayField>
    <errorMessage>Fill Life Event Details</errorMessage>
</ValidationRule>