force-app/main/default/objects/Lead/validationRules/Lost_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Lost&quot;) , ISPICKVAL(  Lost_Reason__c  , &quot;Other&quot;), ISBLANK( Lost_Comment__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Comment__c</errorDisplayField>
    <errorMessage>Please fill in the Lost Comment</errorMessage>
</ValidationRule>