force-app/main/default/objects/Lead/validationRules/Mobile_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(   MobilePhone   )), NOT( CONTAINS(    MobilePhone   ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Enter the Number in +XX------------- format</errorMessage>
</ValidationRule>