force-app/main/default/objects/Lead/validationRules/Other_Life_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Life_Event</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Life_Event__c , &quot;Other&quot;), ISPICKVAL(  Life_Event_2_if_any__c  , &quot;Other&quot;) ,ISPICKVAL(  Life_Event_3_if_any__c  , &quot;Other&quot;) ), ISBLANK( Other__c ) )</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Fill in the Other Life Event</errorMessage>
</ValidationRule>