force-app/main/default/objects/Lead/validationRules/Phone_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Phone  )), NOT( CONTAINS(   Phone  ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter the Number in +XX----------- format</errorMessage>
</ValidationRule>