force-app/main/default/objects/Lead/validationRules/Product_Information_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Information_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Product_Name__c) , OR( ISBLANK( Design_Number__c ) ,ISBLANK(  TEXT( Jewelry_Type__c )  ),ISBLANK(  TEXT(  Type__c  )  ),ISBLANK(  TEXT(  Style__c  )  ), ISBLANK(  TEXT(  Enquiry_Value__c  )  )) )</errorConditionFormula>
    <errorMessage>Please fill in the Product Information</errorMessage>
</ValidationRule>