force-app/main/default/objects/Lead/validationRules/Walkin_Info_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Walkin_Info_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( LeadSource , &quot;Walkin&quot;) , OR( ISBLANK( Remarks__c ) ,ISBLANK(  TEXT( Check_in_Date__c )  ), ISBLANK(  TEXT( Purpose__c )  )) )</errorConditionFormula>
    <errorMessage>Fill in the Walkin Information</errorMessage>
</ValidationRule>