force-app/main/default/objects/Lead/validationRules/Walkin_Info_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Walkin_Info_not_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL( LeadSource , &quot;Walkin&quot;) ) , OR( NOT( ISBLANK( TEXT( Check_in_Date__c ) ) ) ,NOT( ISBLANK( TEXT(  Purpose__c  ) ) ), NOT( ISBLANK(  Remarks__c  ) )) )</errorConditionFormula>
    <errorMessage>Please Do not fill the Walkin Information if Lead Source is not Walkin!</errorMessage>
</ValidationRule>